--- a/hm.tex
+++ b/hm.tex
@@ -4548,7 +4548,7 @@ A further interesting point of view on the meaning and consequences of Liouville
 
 An important consequence of Theorem~\ref{thm:liouville} is that we can apply a large corpus of methods from ergodic theory and, more generally, measure preserving dynamical systems to hamiltonian systems.
 
-These are methods that apply to systems with finite measure, however this is not an uncommon property of hamiltonian systems: for a mechanical system with energy $E = T- U$, due to energy conservation and the positivity of $T$, the accessible phase space is contained in the spatial region $U(q) < E$. If, for example, $U$ is bounded from below and unbounded from above then this is a region of phase space with bounded volume.
+These are methods that apply to systems with finite measure, however this is not an uncommon property of hamiltonian systems: for a mechanical system with energy $E = T + U$, due to energy conservation and the positivity of $T$, the accessible phase space is contained in the spatial region $U(q) < E$. If, for example, $U$ is bounded from below and unbounded from above then this is a region of phase space with bounded volume.
 You can read more about this in \cite[Chapter 3.16.C-D]{book:arnold}.
 
 \chapter{Integrable systems}
