Improve wording in 2.1
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -1664,7 +1664,7 @@ Although I prefer the presentation of the proof in \cite[Chapter 20.B]{book:arno
   These types of symmetries give rise to conservation laws in quantum physics but \emph{not} in classical physics.
 \end{remark}
 
-Let's now look at more and less immediate consequences of our discovery, starting from some of the invariants that we have already seen.
+Let's now look at more and less immediate consequences of our discovery, starting from some of the constants of motion that we have already encountered.
 
 \subsection{Homogeneity of space: total momentum}
 
