--- a/hm.tex
+++ b/hm.tex
@@ -3065,7 +3065,7 @@ We call \emph{hamiltonian system} a system of differential equations of the form
   which should also be familiar: the first is just the definition of momentum while the second is Newton's second law for the system.
 \end{example}
 
-\begin{example}[The hamiltonian for a natural lagrangian on a riemannian manifolds]\label{ex:nlrm}
+\begin{example}[The hamiltonian for a natural lagrangian on a riemannian manifold]\label{ex:nlrm}
   Let $L$ be a free lagrangian
   \begin{equation}
     L(q, \dot q) = \frac12 g_{ij}(q) \dot q^i \dot q^j
