Add one more reference for Lagrange multipliers
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -2614,7 +2614,7 @@ For a brief but more comprehensive discussion of this you can look at \cite[Chap
   where the \emph{constraint force} $\bm{R} = (\bm{R}_1, \ldots, \bm{R}_N)$ belongs to the orthogonal subspace to (the tangent space at $\bx$ of) $Q$.
 \end{theorem}
 \begin{proof}
-  To deal with constraints in the lagrangian formulation, we introduce $l$ new variables $\lambda_1, \ldots, \lambda_l$, called \emph{Lagrange multipliers}\footnote{For a brief introduction on their meaning, I recommend this \href{https://twitter.com/j\_bertolotti/status/1569324058633801729}{twitter thread}.}, and define a new lagrangian
+  To deal with constraints in the lagrangian formulation, we introduce $l$ new variables $\lambda_1, \ldots, \lambda_l$, called \emph{Lagrange multipliers}\footnote{For a brief introduction on their meaning, I recommend this \href{https://twitter.com/j\_bertolotti/status/1569324058633801729}{twitter thread} or this \href{https://www.youtube.com/watch?v=5A39Ht9Wcu0}{YouTube video}.}, and define a new lagrangian
   \begin{equation}
     \widetilde L(\bx, \dot\bx, t) = L(\bx, \dot\bx) + \sum_{j=1}^l \lambda_j f_j(\bx).
   \end{equation}
